plugins {
    id 'java'
    id 'application'
    id 'org.graalvm.buildtools.native' version '0.11.5'
    id 'com.gradleup.shadow' version '9.4.2'
}

group = 'io.ajcm'
version = '2.0.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation platform('io.modelcontextprotocol.sdk:mcp-bom:1.1.3')
    implementation 'io.modelcontextprotocol.sdk:mcp-core'
    implementation 'io.modelcontextprotocol.sdk:mcp-json-jackson2'
    implementation 'net.sf.jt400:jt400:21.0.6'
    implementation 'com.singlestore:singlestore-jdbc-client:1.2.11'
    runtimeOnly 'org.slf4j:slf4j-simple:2.0.18'
    
    testImplementation platform('org.junit:junit-bom:6.1.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation 'io.modelcontextprotocol.sdk:mcp-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
    useJUnitPlatform()
}

application {
    mainClass = "io.ajcm.multidb.mcp.Main"
}

tasks.withType(Jar).configureEach {
    manifest {
        attributes('Implementation-Version': project.version)
    }
}

//// Configure shadowJar to merge JDBC driver services
//shadowJar {
//    mergeServiceFiles()
//}
